--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,19 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.0",
+    "cors": "^2.8.5",
+    "express-validator": "^7.0.1",
+    "uuid": "^9.0.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
     "@types/bcryptjs": "^2.4.6",
@@ -31,7 +44,6 @@
     "@types/uuid": "^9.0.7",
     "@types/pg": "^8.10.9",
     "typescript": "^5.3.3",
-    "ts-node-dev": "^2.0.0",
     "ts-node": "^10.9.2"
   }
 }
