--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-router-dom": "^7.9.6",
-    "react-dom": "^19.2.0",
-    "recharts": "^3.5.1",
-    "lucide-react": "^0.555.0",
+    "axios": "^1.6.5",
     "framer-motion": "^11.0.8",
-    "axios": "^1.6.5"
+    "lucide-react": "^0.555.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
