feat: Phase 1-5 Sentry 에러 모니터링 구현 완료
프론트엔드:
- @sentry/react 패키지 설치
- Sentry 초기화 및 설정 (src/lib/sentry.ts)
- ErrorBoundary 컴포넌트 생성
- App.tsx에 ErrorBoundary 적용
- AuthContext에 사용자 정보 연동
- API client에 에러 자동 캡처 추가
- Vite 환경 변수 타입 정의

백엔드:
- @sentry/node 패키지 설치
- Sentry 초기화 및 설정 (backend/src/lib/sentry.ts)
- Express 에러 핸들러 연동
- 민감 정보 필터링

기능:
- 실시간 에러 추적
- 사용자 정보 자동 연동
- 민감 정보 자동 필터링
- 사용자 친화적인 에러 폴백 UI
- 성능 모니터링 (10% 샘플링)
- 세션 리플레이

문서:
- SENTRY_SETUP_GUIDE.md 작성
- PHASE_1_5_SUMMARY.md 작성

 Phase 1 전체 완료!

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,7 @@ MAX_FILE_SIZE=5242880
 
 # CORS (optional)
 CORS_ORIGIN=http://localhost:5173
+
+# Sentry (Production only)
+SENTRY_DSN=your-backend-sentry-dsn-here
+APP_VERSION=1.0.0
