--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^10.28.0",
     "axios": "^1.6.5",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.555.0",
