--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sentry/react": "^10.28.0",
     "axios": "^1.6.5",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
