--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "sharp": "^0.33.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/web-push": "^3.6.4",
