--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,5 +14,5 @@
     "noImplicitAny": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
